# unifloat

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LGPL-2.1  README  TODO  config.h.cmake  doxygen.in  libunifloat.pc.cmake
cmake/Modules/: DefineCMakeDefaults.cmake  DefineCompilerFlags.cmake
include/unifloat/: bessel.h  cexp.h  constants.h  cstring.h  ctrig.h  debug.h  exp.h  gamma.h  libunifloat.h  trig.h  unifloat.h  unifloat_complex.h
src/: bessel.c  cexp.c  cstring.c  ctrig.c  debug.c  exp.c  gamma.c  math.c  trig.c  unifloat.c  unifloat_complex.c
tests/: CMakeLists.txt  main.c
